--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -9934,6 +9934,7 @@ form.contact-form .checkbox {
   font-weight: 400;
   text-transform: uppercase;
   padding: 10px 15px;
+  min-height: 41px;
 }
 
 .element-file-container .element-file-container-body {
